# llmEmbeddingAnalysis-3rd

./: .gitignore  FIT2024原稿準備.ipynb  FIT2024原稿準備ラストスパート.ipynb  FIT2024原稿用まだ準備程度.ipynb  FIT本番用2(mistral).ipynb  FIT本番用3(sbert).ipynb  JSIAM2024申込対応.ipynb  PersistenceDiagramWrapper.py  README.md  Untitled.ipynb  config.toml  experiment_mode.py  finetuning-qwen.py  finetuning.py  install_requirements.sh  langchain_test.py  logging.conf  multi_vector_representation.py  params.py  prepare_vectors.py  prepare_vectors_test.py  pyproject.toml  reduce_vectors_test.py  requirements.txt  results_parser.py  visualize_vectors.py  実装用確認実験.ipynb
cache/: cache.py
conf/: config.yaml  config.yaml~  config.yml~  config_20240903.yaml  config_20240903_sbert.yaml
conf/io/: llama3-70B.yaml  llama3.yaml  mistral.yaml  mpnet.yaml  nv-embed.yaml  qwen2.yaml  qwen2.yaml~  reflection-llama-31-70B.yaml  sentence-transformers.yaml  sentence-transformes.yaml  sentence-transformes.yaml~
tests/: multi_vector_representation_test.py  params_test.py  prepare_vectors_test.py  reduce_vectors_test_test.py
tests/cache/: cache_test.py
